<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_team_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F7F9"
    tools:context=".fragments.TeamDashboardFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_team"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:title="@string/team_dashboard_title"
        app:titleTextColor="@android:color/black"
        android:contentDescription="@string/team_dashboard_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_team_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_overview"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_team"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_team_members"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_team_overview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@android:layout/simple_list_item_1" />

</androidx.constraintlayout.widget.ConstraintLayout>